Fix dark mode

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   font-size: 18px;
   margin: 0;
   padding: 0;
+  background-color: #081a12;
+  color: #e0e0e0;
 }
 
 a {
@@ -14,7 +16,7 @@ a {
 }
 
 a:visited {
-  color: #ab4cff;
+  color: #c586fc;
 }
 
 a:hover {
@@ -78,13 +80,14 @@ a:active {
 }
 
 #content p {
-  color: #333;
+  color: #e0e0e0;
   line-height: 1.6;
 }
 
 #content h3 {
   font-family: "Myriad Pro", "Helvetica Neue", Helvetica;
   margin-top: 1.5em;
+  color: #86c7fc;
 }
 
 #content .notop {
